implementing simple branch validation for NAME_E41

--- a/hip/templates/forms/resource-summary-form.htm
+++ b/hip/templates/forms/resource-summary-form.htm
@@ -94,6 +94,8 @@
                         </div>
                     </dd>
                     <!-- End Form -->
+
+                    <div class="alert alert-danger branch-invalid-alert" role="alert" style="display:none;">{% trans "The name value must be populated." %}</div>
                 </dl>
 
             </div>
