enhancing NAME_E41 validation to ensure that only one primary name is added -- note: currently we are using the string 'Primary' as the key for the type... this is very brittle and should be enhanced

--- a/hip/templates/forms/resource-summary-form.htm
+++ b/hip/templates/forms/resource-summary-form.htm
@@ -95,7 +95,7 @@
                     </dd>
                     <!-- End Form -->
 
-                    <div class="alert alert-danger branch-invalid-alert" role="alert" style="display:none;">{% trans "The name value must be populated." %}</div>
+                    <div class="alert alert-danger branch-invalid-alert" role="alert" style="display:none;">{% trans "The name value must be populated. A resource can only have one primary name." %}</div>
                 </dl>
 
             </div>
