use the index for identifying the item for delete or edit

--- a/hip/templates/forms/resource-description-form.htm
+++ b/hip/templates/forms/resource-description-form.htm
@@ -81,8 +81,8 @@
                             
                                 <dd>
                                     <div class="">
-                                        <a href="#" title="Remove this description"><i data-bind='attr: {"data-tempId": tempId, "data-DESCRIPTION_E62__entityid": DESCRIPTION_E62__entityid}' class="arches-CRUD-delete fa fa-times-circle"></i></a>
-                                        <a href="#" class="arches-CRUD-child arches-CRUD-edit" title="Edit this description" data-bind='text: DESCRIPTION_TYPE_E55__label, attr: {"data-tempId": tempId, "data-DESCRIPTION_E62__entityid": DESCRIPTION_E62__entityid}'></a>
+                                        <a href="#" title="Remove this description"><i data-bind='attr: {"data-index": $index}' class="arches-CRUD-delete fa fa-times-circle"></i></a>
+                                        <a href="#" class="arches-CRUD-child arches-CRUD-edit" title="Edit this description" data-bind='text: DESCRIPTION_TYPE_E55__label, attr: {"data-index": $index}'></a>
                                     </div>
                                 </dd>
                             </dl>
