--- a/hip/templates/forms/resource-description-form.htm
+++ b/hip/templates/forms/resource-description-form.htm
@@ -30,18 +30,7 @@
                                         <!-- Spacer (for xs screens) -->
                                         <div class="margin-top-5 hidden-sm hidden-md hidden-lg"></div>                                    
 
-                                        <!-- Add Button -->
-                                        <div class="btn-group">
-                                            <button type="button" class="add-button btn btn-primary" style="height: 32px;">{% trans "Add" %}</button>
-                                            <button type="button" class="btn btn-primary dropdown-toggle" style="height: 32px;" data-toggle="dropdown">
-                                                <i class="fa fa-chevron-down"></i>
-                                                <span class="sr-only">{% trans "Toggle Dropdown" %}</span>                            
-                                            </button>
-                                            <ul class="dropdown-menu" role="menu">
-                                                <li><a href="#">{% trans "Discard edits" %}</a></li>
-                                            </ul>
-                                        </div>
-                                        <!-- End Add Button -->
+                                        {% include 'components/add-item-button.htm' %}
                                         
                                         <!-- Simple HTML Editor -->
                                         <div class="arches-html-editor margin-top-5" style="width: 80%;">
