Add measurements form, bring descriptions form in line with new select2 standards.

--- a/hip/templates/forms/resource-description-form.htm
+++ b/hip/templates/forms/resource-description-form.htm
@@ -25,7 +25,9 @@
                                 <form class="form-inline arches-form hidden-xs" role="form">
                                     <div class="form-group" style="width: 100%">
 
-                                        <div style="width:80%; height: 36px; padding-top: 2px;" class="select2 arches-select2-crud-form description-type" id="resource-description-type" data-bind="value: editing.DESCRIPTION_E62.DESCRIPTION_TYPE_E55__value, select2: { data: domains.DESCRIPTION_TYPE_E55, placeholder: 'Type', formatResult: formatDomainValue, formatSelection: selectDomainValue, labelValue: editing.DESCRIPTION_E62.DESCRIPTION_TYPE_E55__label }"></div>
+                               <!--          <div style="width:80%; height: 36px; padding-top: 2px;" class="select2 arches-select2-crud-form description-type" id="resource-description-type" data-bind="value: editing.DESCRIPTION_E62.DESCRIPTION_TYPE_E55__value, select2: { data: domains.DESCRIPTION_TYPE_E55, placeholder: 'Type', viewModel: editing.DESCRIPTION_TYPE_E55, conceptKey: 'DESCRIPTION_TYPE_E55'}"></div>
+ -->
+                                        <div style="width:80%; height: 36px; padding-top: 2px; padding-right: 4px; display: inline-block;" class="select2 arches-select2-crud-form name-type hidden-xs" id="resource-measurement-unit" data-bind="select2: { data: domains.DESCRIPTION_TYPE_E55, placeholder: 'Type', viewModel: editing.DESCRIPTION_E62, conceptKey: 'DESCRIPTION_TYPE_E55'}"></div>
 
                                         <!-- Spacer (for xs screens) -->
                                         <div class="margin-top-5 hidden-sm hidden-md hidden-lg"></div>                                    
