Updated condition update method to match pattern of other forms

--- a/hip/templates/forms/condition-form.htm
+++ b/hip/templates/forms/condition-form.htm
@@ -20,9 +20,9 @@
                             <!-- Screens greater than xs -->
                             <form class="form-inline arches-form hidden-xs" role="form">
                                 <div class="form-group" style="width: 100%;">
-                                    
+
                             <!-- Condition and dates -->  
-                            <div style="width:40%; height: 36px; padding-top: 2px; position:relative; float: left" class="select2 arches-select2-crud-form condition-type hidden-xs" id="condition-type" data-bind="select2: { data: domains.CONDITION_TYPE_E55, placeholder: 'Type', viewModel: editing.CONDITION_TYPE_E55, conceptKey: 'CONDITION_TYPE_E55'}">
+                            <div style="width:40%; height: 36px; padding-top: 2px; display:inline-block; float: left" class="select2 arches-select2-crud-form condition-type hidden-xs" id="condition-type" data-bind="select2: { data: domains.CONDITION_TYPE_E55, placeholder: 'Type', viewModel: editing.CONDITION_TYPE_E55, conceptKey: 'CONDITION_TYPE_E55'}">
 
 <!--                             <div style="width:40%; height: 36px; padding-top: 2px; position:relative; float: left" class="select2 arches-select2-crud-form name-type hidden-xs" id="condition-type" data-bind="value: editing.CONDITION_TYPE_E55.CONDITION_TYPE_E55__value, select2: { data: domains.CONDITION_TYPE_E55, placeholder: 'Type', formatResult: formatDomainValue, formatSelection: selectDomainValue, labelValue: editing.CONDITION_TYPE_E55.CONDITION_TYPE_E55__label }"> -->
                                 
