--- a/hip/templates/forms/summary-form.htm
+++ b/hip/templates/forms/summary-form.htm
@@ -118,103 +118,6 @@
     <!-- End Name Records -->
 </div>
 
-<hr class="devider arches-RDM-divider">
-
-
-<!-- Dates CRUD Form -->
-<div class="row form-group">
-    <div class="col-xs-12">
-        <div class="padding-left-10">
-            
-            <dl>
-                <!-- Title -->
-                <dt>
-                    <h5 id="arches-names-form" class="section-headline">{% trans "Important Dates" %}</h5>
-                </dt>
-
-                <!-- Form -->
-                <dd>
-
-                    <div class="row">
-
-                        <!-- dates -->    
-                        <div class="col-xs-12 col-sm-4"> 
-                            <select style="height: 36px; padding-top: 2px; width:100%" class="select2 arches-select2-crud-form dates" id="" placeholder="threats">
-                                <option value="1">Start Date</option>
-                                <option value="2">Built Date</option>
-                                <option value="3">Birth Date</option>
-                                <option value="4">Creation Date</option>
-                                <option value="5">Formation Date</option>
-                                <option value="6">End Date</option>
-                                <option value="7">Demolition Date</option>
-                                <option value="8">Death Date</option>
-                                <option value="9">Disolution Date</option>
-                                <option value="10">Destruction Date</option>
-                            </select>
-                        </div>
-
-                        <!-- Spacer (for xs screens) -->
-                        <div class="margin-top-5 hidden-sm hidden-md hidden-lg"></div>
-
-                        <div class="col-xs-12 col-sm-4">
-                            <div class="form-group" style="padding-left:0px">
-                                <div class="input-group">
-                                    <input type="text" name="mydate" placeholder="Date" class="form-control datepicker" data-dateformat="dd/mm/yy">
-                                    <span class="input-group-addon"><i class="fa fa-calendar"></i></span>
-                                </div>
-                            </div>
-                        </div>
-
-                        <!-- Spacer (for xs screens) -->
-                        <div class="margin-top-5 hidden-sm hidden-md hidden-lg"></div>
-
-                        {% include 'components/add-item-button.htm' %}
-
-                    </div>
-                </dd>
-                <!-- End Form -->
-            </dl>
-
-        </div>
-    </div>
-</div>
-<!-- End Dates CRUD -->
-
-<!-- Dates Records -->
-<div class="row">
-    <div class="col-xs-12">
-
-        <!-- Address -->
-        <div class="arches-crud-child-section">
-            <dl>
-                <dd class="arches-CRUD-child-title">
-                    {% trans "These dates are associated with this resource:" %}
-                </dd>
-
-                <dd class="margin-left-5">
-                    <div class="arches-crud-record" id="date1-record">
-                        <a href="" class="arches-CRUD-child" title="Delete this date"><i class="arches-CRUD-delete fa fa-times-circle"></i></a>
-                        <a href="" id="date-type1" class="arches-CRUD-child manage-address" title="Edit this date">Built date 10/12/1942
-                        </a>
-                    </div>
-                </dd>
-
-                <dd class="margin-left-5">
-                    <div class="arches-crud-record" id="date1-record">
-                        <a href="" class="arches-CRUD-child" title="Delete this date"><i class="arches-CRUD-delete fa fa-times-circle"></i></a>
-                        <a href="" id="date-type1" class="arches-CRUD-child manage-address" title="Edit this date">Destruction date 3/31/2012
-                        </a>
-                    </div>
-                </dd>
-
-            </dl>
-
-        </div>
-    </div>
-</div>
-<!-- End Dates Records -->
-
-
  <hr class="devider arches-RDM-divider">
 
 <div id="subjects-section">
@@ -238,8 +141,7 @@
                                 <form class="form-inline arches-form hidden-xs" role="form">
                                     <div class="form-group" style="width: 100%">
 
-                                        <div style="width:80%; height: 36px; padding-top: 2px;" class="select2 arches-select2-crud-form resource-type" id="keyword-dropdown
-                                        " data-bind="select2: { data: domains.KEYWORD_E55, placeholder: 'Subject', viewModel: editing.KEYWORD_E55, conceptKey: 'KEYWORD_E55'}"></div>
+                                        <div style="width:80%; height: 36px; padding-top: 2px;" class="select2 arches-select2-crud-form resource-type" id="keyword-dropdown" data-bind="select2: { data: domains.KEYWORD_E55, placeholder: 'Subject', viewModel: editing.KEYWORD_E55, conceptKey: 'KEYWORD_E55'}"></div>
 
                                         <!-- Spacer (for xs screens) -->
                                         <div class="margin-top-5 hidden-sm hidden-md hidden-lg"></div>
